--- a/main/templates/main/includes/inc_category.html
+++ b/main/templates/main/includes/inc_category.html
@@ -1,5 +1,9 @@
-﻿<div class="col-lg-3">
+﻿
 
-           <p align="center"><img class="w-70 p-2"  width="100" height="100" src="/media/{{object.phot}}">  </p>
-        <p align="center"><a class="btn btn-primary  fw-normal align-bottom" href="{% url 'main:category_main' object.pk %}">{{ object.name}}</a></p>
+
+
+<div class="col-lg-3">
+
+           <p align="center"><img class="w-70 p-2" src="/media/{{object.phot}}" alt="Error" width="100" height="100">  </p>
+        <p align="center"><a class="btn btn-primary  fw-normal align-bottom" href="{% url 'main:category_main' object.pk %}">{{ object.name }}</a></p>
 </div><!-- /.col-lg-4 -->
